# roswiimote

./: LICENSE
devel/: .catkin  _setup_util.py
devel/lib/pkgconfig/: state_estimation.pc  state_estimation_node.pc  wiimote_state_estimation.pc
devel/lib/wiimote_state_estimation/: kf_node  state_estimation_node
devel/share/state_estimation/cmake/: state_estimationConfig.cmake
devel/share/state_estimation_node/cmake/: state_estimation_nodeConfig.cmake
devel/share/wiimote_state_estimation/cmake/: wiimote_state_estimationConfig.cmake
src/wiimote_state_estimation/: CMakeLists.txt  package.xml
src/wiimote_state_estimation/include/wiimote_state_estimation/: filter_method.h  kf.h  kf_node.h  state_estimation_node.h
src/wiimote_state_estimation/src/: filter_method.cpp  kf.cpp  kf_node.cpp  state_estimation_node.cpp
